finish required functions

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,4 +1,4 @@
-@import "./normalize.css";
+/* @import "./normalize.css"; */
 
 /*:root -> 获取根元素html*/
 :root {
@@ -33,7 +33,9 @@ a {
   text-decoration: none;
 }
 
-
+li {
+    list-style: none;
+}
 .clear-fix::after {
   clear: both;
   content: '';
